test/example-output/gcc-missing-include-path.txt
In file included from tests/FooBarTest.cpp:6:
./somepath/somefile.h:10:10: fatal error: Filename.h: No such file or directory
   10 | #include "Filename.h"
      |          ^~~~~~~~~~~
compilation terminated.
